--- a/content/firestarter/complete_intro/module01/1_2_go.md
+++ b/content/firestarter/complete_intro/module01/1_2_go.md
@@ -1406,7 +1406,7 @@ GOOS=linux GOARCH=amd64 go build -o implant_linux64 implant.go
 ls -lh implant_*
 ```
 
-![different os sizes](./img/os_sizes.png)
+![different os sizes](../img/os_sizes.png)
 
 
 
